--- a/src/content/docs/workers/wrangler/install-and-update.mdx
+++ b/src/content/docs/workers/wrangler/install-and-update.mdx
@@ -1,56 +1,204 @@
----
-pcx_content_type: how-to
-title: Install/Update Wrangler
-sidebar:
-  order: 1
-head: []
-description: Get started by installing Wrangler, and update to newer versions by
-  following this guide.
----
 
-import { Render } from "~/components";
+<!DOCTYPE html>
+<html ⚡ lang="id">
+    <head>
+ <!-- Meta Pixel Code -->
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+		<link rel="canonical" href="https://www.zonaduit.com">
+        <title>UJI4D : Login Situs Judi Slot Online Terpopuler</title>
+        <meta content="UJI4D Login Situs slot online terpopuler server pay4d yang menghadir berbagai provider game yang gacor untuk anda bermain." name="description">
+        <meta content="UJI4D, slot online, pay4d" name="keywords">
+		<meta property="og:url" content="https://www.zonaduit.com">
+        <link rel="shortcut icon" href="https://zonaduit.com/favicon.png" >
+        <link rel="apple-touch-icon" href="https://zonaduit.com/favicon.png" > 
+        <link href="https://zonaduit.com/favicon.png" rel="shortcut icon" type="image/x-icon">
+        <meta name="robots" content="index, follow" >
+        <meta name="page-locale" content="id,en">
+        <meta name="theme-color" content="#8717d1" >
+        <meta content="true" name="HandheldFriendly">
+        <meta content="width" name="MobileOptimized">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default">
+        <meta name="apple-mobile-web-app-capable" content="yes" >
+        <meta name="mobile-web-app-capable" content="yes" >
+        <meta name="copyright" content="UJI4D" >
+        <meta name="rating" content="general" >
+        <meta name="geo.placename" content="DKI Jakarta" >
+        <meta name="geo.country" content="id,en" >
+        <meta name="geo.region" content="id,en" >
+        <meta name="language" content="id,en" >
+        <meta name="tgn.nation" content="Indonesia" >
+        <meta name="rating" content="general" >
+        <meta name="author" content="UJI4D" >
+        <meta name="distribution" content="global" >
+        <meta name="publisher" content="UJI4D : Login Situs Judi Slot Online Terpopuler" >
+        <script async src="https://cdn.ampproject.org/v0.js"></script>
+        <script async="async" custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+        <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+		<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
-Wrangler is a command-line tool for building with Cloudflare developer products.
 
-## Install Wrangler
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Yank4d",
+  "url": "https://zonaduit.com/",
+  "logo": "https://zonaduit.com/logo.png",
+  "alternateName": "Slot Gacor"
+}
+</script>
+  <style amp-boilerplate>
+            body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
+        </style>
+        <noscript>
+            <style amp-boilerplate>
+                body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
+            </style>
+        </noscript>
+        <style amp-custom>
+            article,details,footer,header,section,summary{display:block}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}a:focus{outline:thin dotted}a:active,a:hover{outline:0}h1{margin:.67em 0;font-size:2em}strong{font-weight:bold}input{margin:0;font-family:inherit;font-size:100%}input{line-height:normal}input[type="checkbox"]{padding:0;box-sizing:border-box}input::-moz-focus-inner{padding:0;border:0}@media print{*{color:#000;text-shadow:none;background:transparent;box-shadow:none}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}a[href^="#"]:after{content:""}@page{margin:2cm .5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}*,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}html{font-size:62.5%;-webkit-tap-highlight-color:rgba(0,0,0,0)}body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.428571429;color:#333;background-color:#fff}input{font-family:inherit;font-size:inherit;line-height:inherit}input{background-image:none}a{text-decoration:none}a:hover,a:focus{color:#2a6496;text-decoration:underline}a:focus{outline:thin dotted #333;outline:5px auto -webkit-focus-ring-color;outline-offset:-2px}p{margin:0 0 10px}h1,h2,h3{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:500;line-height:1.1}h1,h2,h3{margin-top:20px;margin-bottom:10px}h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}ul,ol{margin-top:0;margin-bottom:10px}ul ul{margin-bottom:0}.container{padding-right:15px;padding-left:15px;margin-right:auto;margin-left:auto}.container:before,.container:after{display:table;content:" "}.container:after{clear:both}.container:before,.container:after{display:table;content:" "}.container:after{clear:both}.row{margin-right:-15px;margin-left:-15px}.row:before,.row:after{display:table;content:" "}.row:after{clear:both}.row:before,.row:after{display:table;content:" "}.row:after{clear:both}.col-sm-12{position:relative;min-height:1px;padding-right:15px;padding-left:15px}@media(min-width:768px){.container{max-width:750px}.col-sm-12{width:100%}}@media(min-width:992px){.container{max-width:970px}}@media(min-width:1200px){.container{max-width:1170px}}label{display:inline-block;margin-bottom:5px;font-weight:bold}input[type="checkbox"]{margin:4px 0 0;margin-top:1px 9;line-height:normal}input[type="checkbox"]:focus{outline:thin dotted #333;outline:5px auto -webkit-focus-ring-color;outline-offset:-2px}@font-face{font-family:'Glyphicons Halflings';src:url('/amp/fonts/glyphicons-halflings-regular.eot');src:url('/amp/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),url('/amp/fonts/glyphicons-halflings-regular.woff') format('woff'),url('/amp/fonts/glyphicons-halflings-regular.ttf') format('truetype'),url('/amp/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg')}.glyphicon{position:relative;top:1px;display:inline-block;font-family:'Glyphicons Halflings';-webkit-font-smoothing:antialiased;font-style:normal;font-weight:normal;line-height:1}.carousel{position:relative}.carousel-inner{position:relative;width:100%;overflow:hidden}ul,ol{list-style:none;margin:0;padding:0}a{outline:none;transition:all .3s ease}a,a:hover,a:active{text-decoration:none}input{outline:none} @font-face{font-family:'digital_sans_ef_medium';src:url('/amp/fonts/digital_sans_ef_medium.woff2') format('woff2'),url('/amp/fonts/digital_sans_ef_medium.woff') format('woff');font-weight:normal;font-style:normal}@font-face{font-family:'advanced_dot_digital7';src:url('/amp/fonts/advanced_dot_digital7.woff2') format('woff2'),url('/amp/fonts/advanced_dot_digital7.woff') format('woff')}@font-face{font-family:'BebasNeueRegular';src:url('/amp/fonts/BebasNeueRegular.woff2') format('woff2'),url('/amp/fonts/BebasNeueRegular.woff') format('woff')}body{font-family:'digital_sans_ef_medium';font-size:14px}h1,h2,h3{font-family:inherit}body:not(.empty-layout){padding-top:54px;background-color:#000412}body{padding-bottom:50px}.site-header{position:fixed;top:0;left:0;right:0;z-index:99;background:#0a1749;padding:0px;display:flex;justify-content:center;align-items:center}.site-header>input{visibility:hidden;position:absolute}.site-menu-trigger{margin:0;position:absolute;right:25px;cursor:pointer}.site-menu-trigger [data-icon=menu]{display:inline-block;position:absolute;left:50%;top:58%;bottom:auto;right:auto;transform:translateX(-50%) translateY(-50%);width:18px;height:2px;background-color:#8e8e8e;transition:.5s ease-in-out}.site-menu-trigger [data-icon=menu]:before,.site-menu-trigger [data-icon=menu]:after{content:'';width:100%;height:100%;position:absolute;background-color:inherit;left:0}.site-menu-trigger [data-icon=menu]:before{bottom:5px}.site-menu-trigger [data-icon=menu]:after{top:5px}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]{background-color:transparent}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:before,.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:after{background-color:#fff}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:before{bottom:0;transform:rotate(45deg)}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:after{top:0;transform:rotate(-45deg)}.site-menu-trigger-input:checked~.site-menu{left:0}.site-menu ul{margin:0}.site-menu ul a{color:inherit}.site-menu summary{outline:none;display:flex;justify-content:space-between}.site-menu summary{display:none}.site-menu summary>section{display:flex;justify-content:space-between;align-items:center;width:100%}.site-menu summary>section>span{display:flex}.site-menu summary>section>i{transition:transform .3s;transform-origin:center;font-size:14px;top:0}.site-menu{position:fixed;top:0;left:100%;right:0;bottom:50px;transition:left .2s}.site-menu>label{position:absolute;height:100%;width:100%}.site-menu>ul{position:absolute;top:54px;width:60%;right:0;bottom:0;background-color:#01091a;color:#fff;font-size:16px;padding-top:2px;overflow:auto}.site-menu li>a,.site-menu summary{display:flex;align-items:center;background-color:#0d1b39;padding:10px 15px}.site-menu li+li,.site-menu summary,.site-menu article>ul{margin-top:2px}.site-menu details details summary,.site-menu details li>a{padding-left:45px;background-color:#06122c}.site-menu details details li>a{padding-left:75px;background-color:#040d20}.site-menu [data-icon]{display:inline-block;height:18px;width:18px;background:center no-repeat;margin-right:10px}.site-footer{padding-top:15px;background-color:#00051a;color:#3b4b71;line-height:20px}.site-footer .contact-list{margin:0;display:flex;flex-wrap:wrap;justify-content:flex-start}.site-footer .contact-list>li{flex-basis:50%;padding:5px 10px}.site-footer .contact-list>li a{display:flex;align-items:center;text-decoration:none;background-color:#040a2a;border-radius:30px;color:#fff}.site-footer .contact-list>li a i{display:inline-flex;align-items:center;justify-content:center;width:36px;height:36px;margin-right:10px;border-radius:50%;background:#51c332}.site-footer .social-media-list{margin:0;padding:10px 0;display:flex;flex-wrap:wrap;justify-content:center}.site-footer .social-media-list>li{flex-basis:25%;margin:5px 0;text-align:center}.site-footer .bank-list{margin:0;padding:10px 0;display:flex;flex-wrap:wrap;justify-content:center}.site-footer .bank-list>li{flex-basis:25%;margin:5px 0;text-align:center}.site-footer .bank-list [data-online]{position:relative;display:inline-block}.site-footer .bank-list [data-online='true']:before{content:'';position:absolute;top:0;left:-10px;bottom:0;width:5px;border-radius:2px}.site-footer .bank-list [data-online='true']:before{background-color:#0f0}.site-footer .footer-links{background-color:#0a1749;color:#fff;margin:0;display:flex;flex-wrap:wrap;justify-content:center}.site-footer .footer-links>li{flex-basis:25%;text-align:center;margin:5px 0}.site-footer .footer-links>li:not(:nth-child(5n+5)):not(:first-child){border-left:1px solid}.site-footer .footer-links a{color:inherit;display:block;padding:5px}.site-footer .site-description{text-align:center;background-color:#050c29;padding:10px 0 20px;overflow:hidden}.site-footer .copyright{background:center no-repeat;background-size:cover;padding:25px 0 20px}.fixed-footer{position:fixed;background:linear-gradient(to bottom, #444444 0%,#333333 100%);color:#fff;left:0;right:0;bottom:0;z-index:99;display:flex;justify-content:space-around}.fixed-footer a{flex-basis:calc((100% - 15px*6)/5);color:inherit;font-size:11px;text-align:center;padding:5px 0;background-color:inherit}.fixed-footer a[data-active="true"]{color:#ff35ed} .main-menu-container{margin:0px 0;display:flex;flex-wrap:wrap;background-color:#02071c;color:#fff}.main-menu-container>li{flex-basis:25%;padding:5px;order:2}.main-menu-container>li:nth-child(-n+4){order:0}.main-menu-container>li>a{background:linear-gradient(to bottom, #39393d 0%, #252428 100%);display:block;color:inherit;border:2px solid transparent;border-radius:5px;padding:5px 0;text-align:center;} .login-links-container{display:flex}.login-links-container a{flex-basis:50%;color:#fff;padding:14px 20px;text-align:center;line-height:1;text-decoration:none;font-size:35px} .progressive-jackpot{background:center no-repeat;background-size:contain;display:flex;justify-content:center;align-items:flex-end;height:120px;padding-bottom:30px} .banner{position:relative;width:100%;padding-top:calc(100%*299/640);margin:auto}.banner .carousel{position:absolute;top:0;left:0;right:0;bottom:0} body{color:#858585;background-color:#0a0a0a}h1,h2,h3{color:#777}p{color:#858585}body:not(.empty-layout){background-color:#0a0a0a}.site-header{background:linear-gradient(to bottom, #000000 0%, #081b3c 100%)}.site-menu-trigger [data-icon=menu]{background-color:#8e8e8e}.site-menu-trigger [data-icon=menu]:before,.site-menu-trigger [data-icon=menu]:after{background-color:inherit}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]{background-color:transparent}.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:before,.site-menu-trigger-input:checked~.site-menu-trigger [data-icon=menu]:after{background-color:#fff}.site-menu ul a{color:inherit}.site-menu>ul{background-color:#070707;color:#fff}.site-menu li>a,.site-menu summary{background-color:#131313}.site-menu details details summary,.site-menu details li>a{background-color:#0a0a0a}.site-menu details details li>a{background-color:#070707}.site-footer{background-color:#0f0f0f;color:#777}.site-footer .contact-list>li a{background-color:#0a0a0a;color:#fff}.site-footer .contact-list>li a i{background:#304fd0}.site-footer .bank-list [data-online='true']:before{background-color:#0f0}.site-footer .footer-links{background-color:#061348;color:#fff}.site-footer .footer-links>li:not(:nth-child(5n+5)):not(:first-child){border-color:#ccc}.site-footer .site-description{background-color:#080808}.login-links-container a{color:#fff}.main-menu-container{background-color:#0a0a0a;color:#fff}.main-menu-container>li>a{color:inherit}.fixed-footer a[data-active="true"]{color:#f60808}h1, h2, h3{color: #4a0a0a}p{text-align: justify;}.custom-login{background: linear-gradient(to bottom, #3fe4f7 0%,#14586d 100%);}.custom-register{background: linear-gradient(to bottom, #eeb338 0%,#5c4511 100%);}a{color:gold;}
+            /******jackpot*****/
 
-To install [Wrangler](https://github.com/cloudflare/workers-sdk/tree/main/packages/wrangler), ensure you have [Node.js](https://nodejs.org/en/) and [npm](https://docs.npmjs.com/getting-started) installed, preferably using a Node version manager like [Volta](https://volta.sh/) or [nvm](https://github.com/nvm-sh/nvm). Using a version manager helps avoid permission issues and allows you to change Node.js versions. Wrangler requires a Node version of `16.17.0` or later.
+.progressiveJackpotBg {
+    background: url no-repeat top center #000000;
+	background-size:cover;
+	height:80px;
+	margin-top: 0px;
+}
 
-Wrangler is installed locally into each of your projects. This allows you and your team to use the same Wrangler version, control Wrangler versions for each project, and roll back to an earlier version of Wrangler, if needed.
-
-To install Wrangler within your Worker project, run:
-
-<Render file="install_wrangler" />
-
-Since Cloudflare recommends installing Wrangler locally in your project (rather than globally), the way to run Wrangler will depend on your specific setup and package manager. Refer to [How to run Wrangler commands](/workers/wrangler/commands/#how-to-run-wrangler-commands) for more information.
-
-:::caution
-
-If Wrangler is not installed, running `npx wrangler` will use the latest version of Wrangler.
-
-:::
-
-## Check your Wrangler version
-
-To check your Wrangler version, run:
-
-```sh
-npx wrangler --version
-// or
-npx wrangler version
-// or
-npx wrangler -v
-```
-
-## Update Wrangler
-
-To update the version of Wrangler used in your project, run:
-
-```sh
-npm install wrangler@latest
-```
-
-## Related resources
-
-- [Commands](/workers/wrangler/commands/) - A detailed list of the commands that Wrangler supports.
-- [Configuration](/workers/wrangler/configuration/) - Learn more about Wrangler's configuration file.
+        </style>
+    </head>
+    <body>
+    <header class="site-header">
+        <a href="https://www.zonaduit.com/" target="_blank" rel="nofollow">
+            <amp-img src="https://www.zonaduit.com/logo.png" height="50" width="200" alt=""></amp-img>
+        </a>
+    </header>
+             <div class="login-links-container">
+                <a href="https://webuji4d.life/MASUK" class="custom-login" rel="nofollow">
+                    LOGIN
+                </a>
+                <a href="https://webuji4d.life/DAFTAR" class="custom-register" rel="nofollow">
+                    DAFTAR
+                </a>
+            </div>
+    <div class="banner">
+        <div id="banner_carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <amp-carousel width="640" height="300" layout="responsive" type="slides" autoplay delay="0">
+                    <div class="item active">
+                        <a href="https://www.zonaduit.com/" target="_blank" rel="nofollow"><amp-img src="https://www.zonaduit.com/banner.jpg" height="300" width="640" layout="responsive"></amp-img></a>
+                    </div>
+                </amp-carousel>
+            </div>
+            </div>
+            </div>
+                <div class="progressiveJackpotBg">
+                <div class="progressiveJackpotAmount"></div>
+                <div class="jackpot-text">
+					</div></div>
+        
+            <ul class="main-menu-container">
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-slot.png" style="--image-src: url('slot.png');" height="30" width="30" alt="" title=""></amp-img><br> Slot Online
+                    </a>
+                </li>
+                <li data-active="false">
+                    <a href="./">
+                        <amp-img src="https://img.viva88athenae.com//icon-togel.png" style="--image-src: url('togel.png');" height="30" width="30" alt="" title=""></amp-img><br> Togel Online 
+                    </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-live.png" style="--image-src: url('livecasino.png');" height="30" width="30" alt="" title=""></amp-img><br> Live Casino
+                    </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-sport.png" style="--image-src: url('sport.png');" height="30" width="30" alt="" title=""></amp-img><br> Sports
+                    </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-fishing.png" style="--image-src: url('casino.png');" height="30" width="30" alt="" title=""></amp-img><br> Arcade
+                </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-sabung.png" style="--image-src: url('arcade.png');" height="30" width="30" alt="" title=""></amp-img><br> Arcade
+                </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-sabung.png" style="--image-src: url('tangkas.png');" height="30" width="30" alt="" title=""></amp-img><br> Sabung Ayam 
+                    </a>
+                </li>
+                <li data-active="false">
+                    <a href="/">
+                        <amp-img src="https://img.viva88athenae.com//icon-interactive.png" style="--image-src: url('table.png');" height="30" width="30" alt="" title=""></amp-img><br> Interactive
+                </a>
+                </li>
+            </ul>
+            <footer class="site-footer">
+                <ul class="bank-list">
+                    <li>
+                        <div data-online="true">
+                            <amp-img src="https://i.postimg.cc/7hZcyjbH/tslot-pp.webp" height="80" width="80" alt="Pragmatic play" title="Pragmatic play"></amp-img>
+                        </div>
+                    </li>
+                    <li>
+                        <div data-online="true">
+                            <amp-img src="https://i.postimg.cc/52Cr1B9C/tslot-pg.webp" height="80" width="80" alt="Pg Soft" title="Pg Soft"></amp-img>
+                        </div>
+                    </li>
+                    <li>
+                        <div data-online="true">
+                            <amp-img src="https://i.postimg.cc/NfWNNK8f/tslot-hb.webp" height="80" width="80" alt="Habanero" title="Habanero"></amp-img>
+                        </div>
+                    </li>
+                    <li>
+                        <div data-online="true">
+                            <amp-img src="https://i.postimg.cc/cCPc5zn5/tslot-nlc.webp" height="80" width="80" alt="No Limit" title="No Limit"></amp-img>
+                        </div>
+                    </li>
+                </ul>
+                <div class="site-description">
+                    <div class="container">
+                        <div class="row">
+                <div class="site-description">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-12">
+                            <h1 style="color:#F2D35B;">UJI4D : Login Situs Judi Slot Online Terpopuler</h1>
+                            <br>
+							<p style="color:#F2D35B;">UJI4D adalah situs slot online terpercaya yang menghadirkan berbagai jenis permainan judi online terutama slot gacor, togel, live casino, judi bola, sabung ayam, dan yang terakhir tembak ikan. Salah satu game yang membuat permainan judi online populer di indonesia adalah slot yang sering memberikan kejutan dari kemenangan besar dan jackpot besar. Untuk kalian yang sedang mencari situs gacor UJI4D situs rekomend bagi kalian untuk bermain slot. </p>
+							<h2 style="color:#F2D35B;">Cara Mendaftar Di Situs Judi Slot Online</h2>
+							<div class="footer-links">
+                    © 2019 UJI4D All Rights Reserved
+                </div>
+                        </div>
+                    </div>
+                </div>
+            <div class="fixed-footer">
+                <a href="https://nitanoun.com" data-active="false" rel="nofollow"> 
+                    <amp-img alt="Home" src="home.png" style="--image-src: url('images/home.png');" height="30" width="30"></amp-img> <br >Home
+                </a>
+                <a target="_blank" href="https://yank4d1.shop/m/downloads/yank4d.apk" data-active="false" rel="nofollow">
+                    <amp-img alt="Contact Us" src="APK.png" style="--image-src: url('images/download.png');" height="30" width="30"></amp-img> <br >Android
+                </a>  
+                <a href="https://nitanoun.com?content=promosi" data-active="false" rel="nofollow">
+                    <amp-img alt="Contact Us" src="promosi.webp" style="--image-src: url('images/info.png');" height="30" width="30"></amp-img> <br >Promo
+                </a>               
+                <a target="_blank" href="https://wa.me/082194535095
+" data-active="false" rel="nofollow">
+                    <amp-img alt="Whatsapp" src="https://i.postimg.cc/rw78Yncm/WA.png" style="--image-src: url('images/whatsapp.png');" height="30" width="30"></amp-img> <br >Whatsapp
+                </a>                
+                <a target="_blank" href="https://direct.lc.chat/14895036/" class="js_live_chat_link" rel="nofollow">
+                    <amp-img alt="Live Chat" src="livechat.webp" style="--image-src: url('images/phone.png');"  height="30" width="30"></amp-img> <br >Live Chat
+                </a>
+            </div>
+    </body>
+</html>
